--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -4,9 +4,10 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Marian_Bianca_Lab2"
+        xmlns:CustomCommands="clr-namespace:Marian_Bianca_Lab2.CustomCommands"
         mc:Ignorable="d"
         Title="Virtual Doughnuts Factory" ResizeMode="NoResize" Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}" Height="450" Width="800" Loaded="frmMain_Loaded">
-    <Grid>
+    <Grid MenuItem.Click="FilledItemsShow_Click">
         <Label x:Name="lblTitle" Content="Doughnuts - Bake &amp; Sale" FontSize="24" FontWeight="Bold" Margin="248,10,248,-10"/>
         <GroupBox x:Name="gbRaised" Header="Raised" FontWeight="Bold" Margin="142,92,466,207">
             <Canvas>
@@ -31,15 +32,15 @@
                 <Label x:Name="lblQuantity" Content="Quantity" FontWeight="Normal" Canvas.Left="32" Canvas.Top="10"/>
                 <TextBox x:Name="txtQuantity" Text="0" FontWeight="Normal" TextWrapping="Wrap" Width="37" Canvas.Left="110" Canvas.Top="14" KeyUp="txtQuantity_KeyPress"/>
                 <Label x:Name="lblType" Content="Type" FontWeight="Normal" Canvas.Left="190" Canvas.Top="10"/>
-                <ComboBox x:Name="cmbType" Width="120" Canvas.Left="240" Canvas.Top="12"/>
+                <ComboBox x:Name="cmbType" Width="120" Canvas.Left="240" Canvas.Top="12" SelectionChanged="cmbType_SelectionChanged"/>
                 <Label x:Name="lblPrice" Content="Price" FontWeight="Normal" Canvas.Left="394" Canvas.Top="10"/>
                 <TextBox x:Name="txtPrice" Text="0" IsReadOnly="True" FontWeight="Normal" TextWrapping="Wrap" Width="96" Canvas.Left="444" Canvas.Top="14"/>
                 <ListBox x:Name="lstSale" Height="68" Width="508" Canvas.Top="41" Canvas.Left="32"/>
                 <Label x:Name="lblTotal" Content="Total" FontWeight="Bold" Canvas.Left="341" Canvas.Top="124"/>
                 <TextBox x:Name="txtTotal" Text="0" IsReadOnly="True" FontWeight="Normal" TextWrapping="Wrap" Width="146" Canvas.Left="394" Canvas.Top="128"/>
-                <Button x:Name="btnAddToSale" Content="Add to Sale" FontWeight="Normal" Canvas.Left="596" Canvas.Top="41" Width="74"/>
-                <Button x:Name="btnRemoveItem" Content="Remove Item" FontWeight="Normal" Canvas.Left="596" Canvas.Top="66"/>
-                <Button  x:Name="btnCheckOut" Content="Checkout" FontWeight="Bold" Canvas.Left="596" Canvas.Top="127" Width="74"/>
+                <Button x:Name="btnAddToSale" Content="Add to Sale" FontWeight="Normal" Canvas.Left="596" Canvas.Top="41" Width="74" Click="btnAdd_Click"/>
+                <Button x:Name="btnRemoveItem" Content="Remove Item" FontWeight="Normal" Canvas.Left="596" Canvas.Top="66" Click="btnRemoveItem_Click"/>
+                <Button  x:Name="btnCheckOut" Content="Checkout" FontWeight="Bold" Canvas.Left="596" Canvas.Top="127" Width="74" Click="btnCheckOut_Click"/>
             </Canvas>
         </GroupBox>
         <Menu x:Name="mnuMain" HorizontalAlignment="Left" Height="21" VerticalAlignment="Top" Width="131" Margin="0,10,0,0">
@@ -52,9 +53,14 @@
                         <MenuItem x:Name="glazedToolStripMenuItem" Header="Glazed" Click="glazedToolStripMenuItem_Click" IsCheckable="True"/>
                         <MenuItem x:Name="sugarToolStripMenuItem" Header="Sugar" Click="sugarToolStripMenuItem_Click" IsCheckable="True"/>
                     </MenuItem>
-                    <MenuItem Header="Filled"/>
+                    <MenuItem Header="Filled" Click="FilledItems_Click">
+                        <MenuItem x:Name="lemonFilledMenuItem" Header="Lemon" IsCheckable="True"/>
+                        <MenuItem x:Name="chocolateFilledMenuItem" Header="Chocolate" IsCheckable="True"/>
+                        <MenuItem x:Name="vanillaFilledMenuItem" Header="Vanilla" IsCheckable="True"/>
+                    </MenuItem>
                 </MenuItem>
-                <MenuItem x:Name="mnuStop" Header="Stop" Click="stopToolStripMenuItem_Click"/>         
+                <MenuItem x:Name="mnuStop" Header="Stop" Click="stopToolStripMenuItem_Click" InputGestureText="Ctrl+S" Command="CustomCommands:StopCommand.Launch"/>
+                <MenuItem Header="Inventory" Command="ApplicationCommands.Print"/>
             </MenuItem>
         </Menu>
     </Grid>
